[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/input_daptive_label.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/theme/new_theme.tres" type="Theme" id=3]

[node name="InputAdaptiveLabel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="KeyboardText" type="RichTextLabel" parent="."]
visible = false
margin_right = 271.0
margin_bottom = 49.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Speedup the [color=red]trolley[/color] with [font=res://scenes/ui/bbcode_img_offset.tres] [img=30]res://assets/icons/F_Key_Light.png[/img][/font]"
text = "Speedup the trolley with  "

[node name="GamepadText" type="RichTextLabel" parent="."]
margin_right = 259.0
margin_bottom = 48.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Speedup the [color=red]trolley[/color] with [font=res://scenes/ui/bbcode_img_offset.tres][img=30]res://assets/icons/Positional_Prompts_Left.png[/img][/font]"
text = "Speedup the trolley with "
